--- a/frontend/style.css
+++ b/frontend/style.css
@@ -20,6 +20,7 @@ body {
     background-color: var(--green);
     padding: 2vw;
     margin-top: 1vw; margin-bottom: 1vw;
+    color: var(--offWhite);
 }
 .thirdSectionTopperBrown {
     background-color: var(--brown);
@@ -32,6 +33,12 @@ body {
     margin-left: 2vw; margin-right: 2vw;
     margin-top: 1vw; margin-bottom: 1vw;
     background-color: var(--lightBrown);
+}
+.thirdSectionDarkBrown {
+    width: 30vw;
+    margin-left: 2vw; margin-right: 2vw;
+    margin-top: 1vw; margin-bottom: 1vw;
+    background-color: var(--brown);
 }
 
 /* top-most bar */
@@ -82,14 +89,28 @@ input {
     margin-right: 1vw; margin-left: 1vw;
 }
 
-/* Add onto */
+/* Home Page */
 .title-text {
     color: var(--darkGreen);
     text-align: center;
+    font-weight: bold;
+    font-size: 12vh;
+    margin: 10vh;
+}
+.sub-title-text {
+    color: var(--darkGreen);
+    text-align: center;
+    font-size: 5vh;
+    margin: 8vh;
 }
 .paragraph-text {
     color: var(--darkBrown);
     text-align: center;
+}
+.button-text {
+    text-align: center;
+    font-weight: bold;
+    font-size: 5vh;
 }
 
 /* dropdown menu */
