--- a/frontend/style.css
+++ b/frontend/style.css
@@ -83,6 +83,10 @@ body {
     color: var(--darkBrown);
     margin-left: 1vw;
 }
+.siteLogoText:hover {
+    color: inherit;
+    text-decoration: none;
+}
 
 /* nav bar */
 .aboveNavBar {
