--- a/frontend/style.css
+++ b/frontend/style.css
@@ -371,7 +371,6 @@ form {
   left: 50%;
   transform: translate(-30%, -34%);
 }
-
 .popup-content {
   display: flex;
   text-align: center;
@@ -383,13 +382,11 @@ form {
   align-items: center;
   justify-content: center;
 }
-
 .popup-content form {
     width: 80%;
     align-items: left;
     text-align: left;
 }
-
 .close {
   font-size: 1.5rem;
   cursor: pointer;
@@ -398,4 +395,79 @@ form {
   text-align: right;
   padding-right: 0.75vh;
   color: white;
+}
+.close:hover {
+  color: white;
+}
+
+
+/* star ratings */
+.star-rating {
+  border: none;
+  text-align: left;
+}
+.stars {
+  display: inline-flex;
+  flex-direction: row-reverse; 
+  justify-content: center;
+}
+.stars input {
+  display: none; 
+}
+.stars label {
+  font-size: 5vh;
+  color: var(--lightBrown); 
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.stars label:hover {
+  color: var(--darkBrown);
+}
+.stars label:hover ~ label {
+  color: var(--darkBrown);
+}
+.stars input:checked ~ label {
+  color: var(--darkBrown);
+}
+
+
+/* settings */
+.settingsSection {
+    width: 100%;
+    display: grid;
+    gap: 2vh;
+    grid-template-columns: 1.5fr 6fr;
+    text-align: left;
+}
+.settingsCategories {
+    background-color: var(--green);
+    color: var(--offWhite);
+    position: sticky;
+    top: 0;
+    height: 100%;
+    padding-left: 1vw; padding-right: 1vw;
+}
+.sectionCategoriesContainer {
+    position: sticky;
+    top: 0;
+    height: fit-content;
+    padding-top: 1vw;
+}
+.settingsCategories h1 {
+    font-size: 3vh;
+    font-weight: bold;
+}
+.settingsCategories h2 {
+    font-size: 2vh;
+    font-weight: bold;
+    margin-top: 2vh; margin-bottom: 2vh;
+}
+.settingsValues {
+    background-color: var(--lightBrown);
+    padding: 1vw;
+    color: var(--darkBrown);
+}
+.settingsValues h1 {
+    font-size: 2vh;
+    font-weight: bold;
 }
