--- a/frontend/style.css
+++ b/frontend/style.css
@@ -284,6 +284,9 @@ form {
     font-size: 3vh;
     font-weight: bold;
 }
+.filter form {
+    text-align: left;
+}
 .filter form fieldset label {
     font-size: 2vh;
     font-weight: bold;
@@ -467,7 +470,39 @@ form {
     padding: 1vw;
     color: var(--darkBrown);
 }
+.settingsValues form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    font-weight: bold;
+}
 .settingsValues h1 {
     font-size: 2vh;
     font-weight: bold;
+}
+.buttonPFP {
+    background: none;
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0);
+    border-radius: 25px;
+    border-width: 0.5vh;
+    padding: 0;
+    margin-top: 1vh; margin-bottom: 1vh; margin-right: 1vh;
+}
+.buttonPFP img {
+    width: 8vw;
+    margin: 1vh;
+}
+.buttonPFP:focus {
+    outline: none; 
+    box-shadow: none;
+    border-style: solid;
+    border-color: var(--darkBrown);
+}
+.buttonPFP:hover {
+    outline: none; 
+    box-shadow: none;
+    border-style: solid;
+    border-color: var(--darkBrown);
 }
