--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,6 +66,22 @@ body {
     color: white;
     font-size: 2vh; 
 }
+.mainButtonBrownXSmall {
+    width: 7vw;
+    padding: 0.25vw;
+    background: var(--brown);
+    border-radius: 20px;
+    border: none;
+    color: white;
+    font-size: 1.5vh; 
+}
+.mainButtonBrownXSmall:hover {
+    background: var(--darkBrown);
+}
+.mainButtonBrownXSmall:focus {
+    outline: none; /* removes small border */
+    box-shadow: none;
+}
 .mainButtonBrownSmall:hover {
     background: var(--darkBrown);
 }
@@ -469,13 +485,19 @@ form {
     background-color: var(--lightBrown);
     padding: 1vw;
     color: var(--darkBrown);
+    font-weight: bold;
 }
 .settingsValues form {
+    width: 100%;
+}
+.settingsValues fieldset {
+    margin-top: 1vw;
+}
+.pfpContainer {
     display: flex;
     flex-direction: row;
     width: 100%;
     flex-wrap: wrap;
-    font-weight: bold;
 }
 .settingsValues h1 {
     font-size: 2vh;
