--- a/frontend/style.css
+++ b/frontend/style.css
@@ -432,10 +432,7 @@ input[type=checkbox] {
     background-color: rgba(0, 0, 0, 0.5); 
     z-index: 9999; 
 }
-
-
-/* MAKE REVIEW POPUP =====================================================================================================================| */
-.popupReview {
+.popup {
     display: none; 
     background-color: var(--darkGreen);
     justify-content: center;
@@ -455,8 +452,23 @@ input[type=checkbox] {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.popup-contentReview {
-    display: flex;
+.close {
+    font-size: 1.5rem;
+    cursor: pointer;
+    grid-column: 3;
+    height: 100%;
+    text-align: right;
+    padding-right: 0.75vh;
+    color: white;
+    z-index: 10000; 
+}
+.close:hover {
+    color: white;
+}
+
+/* POPUP SPECIFICS =====================================================================================================================| */
+.popupContentReview {
+    display: none;
     flex-direction: column;
     align-items: center;
     background-color: var(--green);
@@ -469,49 +481,13 @@ input[type=checkbox] {
     justify-content: flex-start; 
     text-align: center;
 }
-.popup-contentReview form {
+.popupContentReview form {
     width: 80%;
     align-items: left;
     text-align: left;
 }
-.closeReview {
-    font-size: 1.5rem;
-    cursor: pointer;
-    grid-column: 3;
-    height: 100%;
-    text-align: right;
-    padding-right: 0.75vh;
-    color: white;
-    z-index: 10000; 
-}
-.closeReview:hover {
-    color: white;
-}
-
-
-/* ADD TO COLLECTION POPUP =====================================================================================================================| */
-.popupCollection {
-    display: none; 
-    background-color: var(--darkGreen);
-    justify-content: center;
-    align-items: center;
-    width: 60vw;
-    height: 70vh;
-    border-style: solid;
-    border-width: 1vh;
-    border-color: var(--darkBrown);
-    border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    grid-template-columns: 0.5fr 15fr 0.5fr;
-    grid-template-rows: 100%;
-    z-index: 10000;
-    position: fixed;
-    top: 50%;         
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.popup-contentCollection {
-    display: flex;
+.popupContentCollection {
+    display: none;
     flex-direction: column;
     align-items: center;
     background-color: var(--green);
@@ -524,23 +500,10 @@ input[type=checkbox] {
     justify-content: flex-start; 
     text-align: center;
 }
-.popup-contentCollection form {
+.popupContentCollection form {
     width: 80%;
     align-items: left;
     text-align: left;
-}
-.closeCollection {
-    font-size: 1.5rem;
-    cursor: pointer;
-    grid-column: 3;
-    height: 100%;
-    text-align: right;
-    padding-right: 0.75vh;
-    color: white;
-    z-index: 10000; 
-}
-.closeCollection:hover {
-    color: white;
 }
 .collectionContainer {
     display: flex;
