--- a/frontend/style.css
+++ b/frontend/style.css
@@ -47,7 +47,7 @@ input[type=checkbox] {
 
 
 /* GENERAL SECTIONS =====================================================================================================================| */
-.section-content-holder-clear {
+.sectionContentHolderClear {
     width: 96%;
 }
 .section-content-holder-green {
@@ -514,6 +514,26 @@ input[type=checkbox] {
 }
 .popup.show {
     display: grid;
+}
+.popupSmall {
+    display: flex; 
+    background-color: var(--darkGreen);
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    height: fit-content;
+    border-style: solid;
+    border-width: 1vh;
+    border-color: var(--darkBrown);
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    grid-template-columns: 0.5fr 15fr 0.5fr;
+    grid-template-rows: 100%;
+    z-index: 10000;
+    position: fixed;
+    top: 50%;         
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .popupContent {
     display: flex;
