--- a/frontend/style.css
+++ b/frontend/style.css
@@ -517,11 +517,12 @@ input[type=checkbox] {
 }
 .popupSmall {
     display: flex; 
-    background-color: var(--darkGreen);
+    background-color: var(--green);
     justify-content: center;
     align-items: center;
     width: fit-content;
-    height: fit-content;
+    height: 40%;
+    overflow-y: auto;
     border-style: solid;
     border-width: 1vh;
     border-color: var(--darkBrown);
