--- a/frontend/style.css
+++ b/frontend/style.css
@@ -88,6 +88,27 @@ input[type=checkbox] {
     padding-left: 2vw; padding-right: 2vw;
     padding-top: 1vw; padding-bottom: 1vw;
 }
+.portraitWarning {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: var(--offWhite);
+  font-size: 200%;
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (orientation: portrait) {
+  .portraitWarning {
+    display: flex;
+  }
+}
 
 
 /* GENERAL BUTTONS =====================================================================================================================| */
