--- a/frontend/style.css
+++ b/frontend/style.css
@@ -542,7 +542,8 @@ input[type=checkbox] {
     justify-content: center;
     align-items: center;
     width: fit-content;
-    height: 40%;
+    height: fit-content;
+    max-height: 60vh;
     overflow-y: auto;
     border-style: solid;
     border-width: 1vh;
