--- a/frontend/style.css
+++ b/frontend/style.css
@@ -94,8 +94,8 @@ input[type=checkbox] {
     z-index: 9999;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     color: var(--offWhite);
     font-size: 300%;
