--- a/frontend/style.css
+++ b/frontend/style.css
@@ -94,8 +94,8 @@ input[type=checkbox] {
     z-index: 9999;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.9);
     color: var(--offWhite);
     font-size: 300%;
@@ -847,6 +847,7 @@ input[type=checkbox] {
     color: var(--offWhite);
     padding: 1rem;
     margin-bottom: 0;
+    width: 90vw;
 }          
 .books-grid {
     display: grid;
@@ -855,6 +856,7 @@ input[type=checkbox] {
     padding: 1.5rem;
     background: var(--lightBrown);
     min-height: 25vh;
+    width: 90vw;
 }          
 .book-card {
     padding: 1rem;
